// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcFilterPopover > should display number of selected filters if the value of numberOfSelectedFilters is greater than 0 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-filter-popover"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Test label"
      >
        Test label
      </span>
      <span
        class="ec-badge ec-badge--info ec-filter-popover__badge"
        data-test="ec-badge"
      >
        
        5
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcFilterPopover > should not display number of selected filters if the value of numberOfSelectedFilters is 0 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-filter-popover"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Test label"
      >
        Test label
      </span>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcFilterPopover > should render correctly the named slot 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-filter-popover"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Test label"
      >
        Test label
      </span>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <p>
        Test name slot
      </p>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcFilterPopover > should render properly when isFullHeight is set 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-filter-popover"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Test label"
      >
        Test label
      </span>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content ec-filter-popover__filter-content--is-full-height"
    >
      
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcFilterPopover > should render properly when label prop was given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-filter-popover"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Test label"
      >
        Test label
      </span>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcFilterPopover > should reset the open status of the popover 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-filter-popover"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Test label"
      >
        Test label
      </span>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcFilterPopover > should set the open status of the popover 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-filter-popover"
>
  <ec-stub
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger ec-filter-popover__trigger--focused"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Test label"
      >
        Test label
      </span>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      
    </div>
    
  </ec-stub>
</div>
`;
